--- a/index.html
+++ b/index.html
@@ -170,10 +170,17 @@
                 <div class="col-md-3">
                   <div class="product_list">
                     <div class="product_grid_item img-container">
-                      <img class="img-fluid" src="images/1574708623 (1) 1.png" alt="" width="220" height="280" />
-                        <div class="view-btn-container">
-                          <button class="view-btn">View</button>
-                        </div>
+                      <img class="img-fluid" id="img-fluid-id" src="images/1574708623 (1) 1.png" alt="" width="220" height="280" />
+                      <a href="#"><button class="view-btn">View</button></a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-md-3">
+                  <div class="product_list">
+                    <div class="product_grid_item img-container">
+                      <img class="img-fluid" id="img-fluid-id2" src="images/1574708623 (1) 1.png" alt="" width="220" height="280" />
+                      <a href="#"><button class="view-btn">View</button></a>
                     </div>
                   </div>
                 </div>
@@ -182,20 +189,7 @@
                   <div class="product_list">
                     <div class="product_grid_item img-container">
                       <img class="img-fluid" src="images/1574708623 (1) 1.png" alt="" width="220" height="280" />
-                        <div class="view-btn-container">
-                          <button class="view-btn">View</button>
-                        </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-3">
-                  <div class="product_list">
-                    <div class="product_grid_item img-container">
-                      <img class="img-fluid" src="images/1574708623 (1) 1.png" alt="" width="220" height="280" />
-                        <div class="view-btn-container">
-                          <button class="view-btn">View</button>
-                        </div>
+                          <a href="#"><button class="view-btn">View</button></a>
                     </div>
                   </div>
                 </div>
@@ -203,16 +197,14 @@
                   <div class="product_list">
                     <div class="product_grid_item img-container">
                       <img class="img-fluid" src="images/1574708623 (1) 1.png" alt="" width="220" height="280" />
-                        <div class="view-btn-container">
-                          <button class="view-btn">View</button>
-                        </div>
+                      <a href="#"><button class="view-btn">View</button></a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div  class="text-center load_remove load_web" >
-                  <button class="main-btn login_btn btn_hover" >Load More</button>
+                  <a href="#"><button class="main-btn login_btn btn_hover" >Load More</button></a>
                 </div>
               </div>
             </div>
@@ -232,9 +224,7 @@
                 <div class="product_list">
                   <div class="product_grid_item img-container">
                     <img class="img-fluid" src="images/1574708623 (1) 1 (1).png" alt="" width="210" />
-                      <div class="view-btn-container">
-                        <button class="view-btn">View</button>
-                      </div>
+                    <a href="#"><button class="view-btn">View</button></a>
                   </div>
                 </div>
               </div>
@@ -243,9 +233,7 @@
                 <div class="product_list">
                   <div class="product_grid_item img-container">
                     <img class="img-fluid" src="images/1574708623 (1) 1 (1).png" alt="" width="210" />
-                      <div class="view-btn-container">
-                        <button class="view-btn">View</button>
-                      </div>
+                    <a href="#"><button class="view-btn">View</button></a>
                   </div>
                 </div>
               </div>
@@ -253,9 +241,7 @@
                 <div class="product_list">
                   <div class="product_grid_item img-container">
                     <img class="img-fluid" src="images/1574708623 (1) 1 (1).png" alt="" width="210" />
-                      <div class="view-btn-container">
-                        <button class="view-btn">View</button>
-                      </div>
+                    <a href="#"><button class="view-btn">View</button></a>
                   </div>
                 </div>
               </div>
@@ -263,9 +249,7 @@
                 <div class="product_list">
                   <div class="product_grid_item img-container">
                     <img class="img-fluid" src="images/1574708623 (1) 1 (1).png" alt="" width="210" />
-                      <div class="view-btn-container">
-                        <button class="view-btn">View</button>
-                      </div>
+                    <a href="#"><button class="view-btn">View</button></a>
                   </div>
                 </div>
               </div>
@@ -613,6 +597,7 @@
     </div>
 
     <!-- javastript  -->
+    <script src="js/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
