--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
           <div class="content">
             <div class="logo">
-              <a href="index.html"><img src="./images/logo_new.png" class="img_margin logo_img" alt="" /></a>
+              <a href="index.html"><img src="./images/logo.png" alt="" /></a>
             </div>
             <ul class="links">
               <!-- Our Services -->
@@ -130,7 +130,7 @@
               </li>
   
               <li ><a href="#" class="login_mobile">Log In</a></li>
-              <li> <button class="main-btn login_btn btn_hover btn-margin" >Get Started</button></li>
+              <li> <button class="main-btn login_btn btn_hover" >Get Started</button></li>
             </ul>
           </div>
         </nav>
