--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
           <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
           <div class="content">
             <div class="logo">
-              <a href="index.html"><img src="./images/logo.png" alt="" /></a>
+              <!-- <a href="index.html"><img src="./images/logo.png" alt="" /></a> -->
+              <a href="index.html"><img src="./images/Seagull-Logo.png" width="120px" height="120px"  alt="" /></a>
             </div>
             <ul class="links">
               <!-- Our Services -->
